--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </div> -->
     </div>
     <div id="ball"></div>
-    <script src='js/index.js'></script>
+    <script src='js/app.js'></script>
+    <!-- <script src='js/index.js'></script> -->
 
 </body>
 
