half way through resize implementation

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <h2 class="fluid-type30-55">JACOB FRANK</h2>
                 <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
                 <h6 class="fluid-type10-20">Website in Progress...</h6>
-                <div class="ballGif">
+                <!-- <div class="ballGif">
                     <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif">
-                </div>
+                </div> -->
                 <div class="nav" style="visibility: inherit; opacity: 1;">
                     <div class="nav-left nav-transform">
                         <div class="nav-about-wrapper">
