--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="Jacob Frank">
     <title>Jacob Frank</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script>
     <script src="vendors/jquery.easings.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
     <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
     <script src="https://use.typekit.net/oih0jze.js"></script>
     <script>
@@ -29,14 +29,14 @@
             <div class="text">
                 <h2 class="fluid-type30-55">JACOB FRANK</h2>
                 <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
-                <h6 class="fluid-type10-20">Website in Progress...</h6>
-                <!-- <div class="ballGif">
-                    <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif">
-                </div> -->
+                <h6 class="fluid-type10-20">Website will be done soon</h6>
+                <!-- <div class="ballGif"> -->
+                    <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
+                <!-- </div> -->
                 <div class="nav" style="visibility: inherit; opacity: 1;">
                     <div class="nav-left nav-transform">
                         <div class="nav-about-wrapper">
-                            <h3 class="nav-about"> <a href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf"> Resume</a> </h3>
+                            <h3 class="nav-about"> <a href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </h3>
                         </div>
                     </div>
                     <div class="nav-mail-wrapper nav-transform-right nav-right">
@@ -45,9 +45,9 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="section">
+        <div class="section">
             Case Studies
-        </div> -->
+        </div>
     </div>
     <div id="ball"></div>
     <script src='js/app.js'></script>
