--- a/index.html
+++ b/index.html
@@ -19,30 +19,32 @@
             Typekit.load({
                 async: true
             });
+
         } catch (e) {}
     </script>
 </head>
 
 <body>
+    <div class="nav">
+        <div class="nav--left nav--transform">
+            <div class="nav__about-wrapper">
+                <p class="fluid-type14-26 roboto nav__about"> <a href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
+            </div>
+        </div>
+        <div class="nav__mail-wrapper nav--transformRight nav--right">
+            <p class="fluid-type14-26 roboto nav__mail">  <a href="mailto:hello@jacobdfrank.com?subject=Hello Jacob"> Email</a> </p>
+        </div>
+    </div>
     <div id="fullpage" onscroll="getScrollPosition()">
+
         <div class="section" id="homepage--background">
-            <div class="text">
-                <h2 class="fluid-type30-55">JACOB FRANK</h2>
-                <h6 class="fluid-type14-26">Developer &amp; Designer</h6>
-                <h6 class="fluid-type10-20">Website will be done soon</h6>
+            <div class="homepage__text">
+                <p class="fluid-type30-55 myriad-pro-condensed">JACOB FRANK</p>
+                <p class="fluid-type14-26 roboto">Developer &amp; Designer</p>
+                <p class="fluid-type10-20 roboto">Website will be done soon</p>
                 <!-- <div class="ballGif"> -->
-                    <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
+                <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
                 <!-- </div> -->
-                <div class="nav" style="visibility: inherit; opacity: 1;">
-                    <div class="nav-left nav-transform">
-                        <div class="nav-about-wrapper">
-                            <h3 class="nav-about"> <a href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </h3>
-                        </div>
-                    </div>
-                    <div class="nav-mail-wrapper nav-transform-right nav-right">
-                        <h3 class="nav-mail">  <a href="mailto:hello@jacobdfrank.com?subject=Hello Jacob"> Email</a> </h3>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="section">
