trying to get typekit to work

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
             </div>
         </div>
         <div class="nav__mail-wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-26 roboto nav__mail"> <a href="mailto:hello@jacobdfrank.com?subject=Hello Jacob"> Email</a> </p>
+            <p class="fluid-type14-26 roboto nav__mail"> <a href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
         </div>
     </div>
     <div id="fullpage" onscroll="getScrollPosition()">
 
         <div class="section" id="homepage--background">
             <div class="homepage__text">
-                <p class="fluid-type30-55 myriad-pro-condensed">JACOB FRANK</p>
+                <p class="fluid-type30-55 proxima-nova-condensed">JACOB FRANK</p>
                 <p class="fluid-type14-26 roboto">Developer &amp; Designer</p>
                 <p class="fluid-type10-20 roboto">Website will be done soon</p>
                 <!-- <div class="ballGif"> -->
