Myriad Pro condensed added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <div class="section" id="homepage--background">
             <div class="homepage__text">
-                <p class="fluid-type30-55 proxima-nova-condensed">JACOB FRANK</p>
+                <p class="fluid-type30-55 myriad-pro-condensed">JACOB FRANK</p>
                 <p class="fluid-type14-26 roboto">Developer &amp; Designer</p>
                 <p class="fluid-type10-20 roboto">Website will be done soon</p>
                 <!-- <div class="ballGif"> -->
