Worked on website

--- a/index.html
+++ b/index.html
@@ -49,25 +49,32 @@
     <div class="nav">
         <div class="nav--left nav--transform">
             <div class="nav__about-wrapper">
-                <p class="fluid-type14-26 roboto nav__about"> <a href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
+                <p class="fluid-type14-20 roboto nav__about"> <a href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
             </div>
         </div>
         <div class="nav__mail-wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-26 roboto nav__mail"> <a href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
+            <p class="fluid-type14-20 roboto nav__mail"> <a href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
         </div>
     </div>
-    <div id="fullpage" onscroll="getScrollPosition()">
 
+    <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section" id="homepage--background">
             <div class="homepage__text">
-                <p class="fluid-type30-55 myriad-pro-condensed">JACOB FRANK</p>
-                <p class="fluid-type14-26 roboto">Developer &amp; Designer</p>
-                <p class="fluid-type10-20 roboto">Website will be done soon</p>
+                <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
+                <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
+                <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
                 <!-- <div class="ballGif"> -->
                 <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
                 <!-- </div> -->
             </div>
+            <div class="bottom__link">
+                <p class="fluid-type14-20 roboto bottom__link__name"> Work</p>
+                    <div id="arrowdown">
+                        <div id="arrowdown-trail"></div>
+                    </div>
+            </div>
         </div>
+
         <div class="section">
             Case Studies
         </div>
