Worked on responsively

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </div>
             <div class="bottom__link">
                 <p class="fluid-type14-20 roboto bottom__link__name"> Work</p>
-                    <div id="arrowdown">
-                        <div id="arrowdown-trail"></div>
+                    <div class="bottom__link__line">
+                        <div class="bottom__link__line arrowdown-trail"></div>
                     </div>
             </div>
         </div>
