cleaned css and updated work button

--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
 
 <body>
     <div class="nav">
-        <div class="nav--left nav--transform">
-            <div class="nav__about-wrapper">
-                <p class="fluid-type14-20 roboto nav__about"> <a href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
-            </div>
+        <div class="nav__wrapper nav--left nav--transform">
+                <p class="fluid-type14-20 roboto link"> <a class="link__decoration"href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
         </div>
-        <div class="nav__mail-wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-20 roboto nav__mail"> <a href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
+        <div class="nav__wrapper nav--transformRight nav--right">
+            <p class="fluid-type14-20 roboto link"> <a class="link__decoration"href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
         </div>
     </div>
 
@@ -67,8 +65,8 @@
                 <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
                 <!-- </div> -->
             </div>
-            <div class="bottom__link">
-                <p class="fluid-type14-20 roboto bottom__link__name"> Work</p>
+            <div class="bottom__link link">
+                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration" href="./index.html#page2">Work</a></p>
                     <div class="bottom__link__line__container">
                         <div class="bottom__link__line"></div>
                     </div>
