--- a/projects/pulsating/index.html
+++ b/projects/pulsating/index.html
@@ -45,9 +45,9 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="section">
+        <div class="section">
             Case Studies
-        </div> -->
+        </div>
     </div>
     <div id="ball"></div>
     <script src='js/index.js'></script>
