--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 <body>
     <div class="nav">
         <div class="nav__wrapper nav--left nav--transform">
-                <p class="fluid-type14-20 roboto link"> <a class="link__decoration"href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
+            <p class="fluid-type14-20 roboto link"> <a class="link__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-20 roboto link"> <a class="link__decoration"href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
+            <p class="fluid-type14-20 roboto link"> <a class="link__decoration" href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
         </div>
     </div>
 
     <div id="fullpage" onscroll="getScrollPosition()">
-        <div class="section" id="homepage--background">
+        <div class="section">
             <div class="homepage__text">
                 <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
                 <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
@@ -67,14 +67,27 @@
             </div>
             <div class="bottom__link link">
                 <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration" href="./index.html#page2">Work</a></p>
-                    <div class="bottom__link__line__container">
-                        <div class="bottom__link__line"></div>
-                    </div>
+                <div class="bottom__link__line__container">
+                    <div class="bottom__link__line"></div>
+                </div>
             </div>
         </div>
 
         <div class="section">
-            Case Studies
+            <div class="homepage__text">
+                <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
+                <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
+                <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
+                <!-- <div class="ballGif"> -->
+                <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
+                <!-- </div> -->
+            </div>
+            <div class="bottom__link link">
+                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration" href="./index.html#page2">Work</a></p>
+                <div class="bottom__link__line__container">
+                    <div class="bottom__link__line"></div>
+                </div>
+            </div>
         </div>
     </div>
     <div id="ball"></div>
