--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html>
 
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="keywords" content="">
-    <meta name="description" content="Jacob Frank">
-    <title>Jacob Frank</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=no">
+
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+
+    <meta name="description" content="Developer, Designer, and Student">
+
+    <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
+    <meta property="og:description" content="Developer, Designer, and Student at RIT">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://stevenmengin.com/media/assets/social.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="http://steven">
+    <meta property="og:url" content="http://stevenmengin.com">
+
+    <meta itemprop="name" content="Digital designer in London">
+    <meta itemprop="description" content="Digital designer in London">
+    <meta itemprop="image" content="Digital designer in London">
+
+    <meta name="author" content="Jacob Frank">
+
+    <title>Jacob Frank Developer &amp; Designer</title>
+
     <link rel="stylesheet" href="css/style.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script>
@@ -59,6 +81,7 @@
         <div class="section">
             <div class="homepage__text">
                 <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
+                <!-- <p style="font-size: 90px !important; color: #333 !important" class="myriad-pro-condensed homepage__name">JACOB FRANK</p> -->
                 <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
                 <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
                 <!-- <div class="ballGif"> -->
