fixed bottom link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <!-- </div> -->
             </div>
             <div class="bottom__link link">
-                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration" href="./index.html#page2">Work</a></p>
+                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="./index.html#page2">Work</a></p>
                 <div class="bottom__link__line__container">
                     <div class="bottom__link__line"></div>
                 </div>
@@ -106,7 +106,7 @@
                 <!-- </div> -->
             </div>
             <div class="bottom__link link">
-                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration" href="./index.html#page2">Work</a></p>
+                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="./index.html#page2">Work</a></p>
                 <div class="bottom__link__line__container">
                     <div class="bottom__link__line"></div>
                 </div>
