worked on bottom link still

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <meta property="og:site_name" content="http://steven">
     <meta property="og:url" content="http://stevenmengin.com">
 
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+
     <meta itemprop="name" content="Digital designer in London">
     <meta itemprop="description" content="Digital designer in London">
     <meta itemprop="image" content="Digital designer in London">
