--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <!-- </div> -->
             </div>
             <div class="bottom__link link">
-                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="./index.html#page2">Work</a></p>
+                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Work</a></p>
                 <div class="bottom__link__line__container">
                     <div class="bottom__link__line"></div>
                 </div>
@@ -100,16 +100,12 @@
         </div>
 
         <div class="section">
-            <div class="homepage__text">
+            <div class="homepage__text" href="#page1">
                 <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
                 <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
-                <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
-                <!-- <div class="ballGif"> -->
-                <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
-                <!-- </div> -->
             </div>
             <div class="bottom__link link">
-                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="./index.html#page2">Work</a></p>
+                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Work</a></p>
                 <div class="bottom__link__line__container">
                     <div class="bottom__link__line"></div>
                 </div>
