disappear on slide complete

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:site_name" content="http://steven">
+    <meta property="og:site_name" content="http://jacob">
     <meta property="og:url" content="http://stevenmengin.com">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -100,12 +100,15 @@
         </div>
 
         <div class="section">
-            <div class="homepage__text" href="#page1">
-                <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
-                <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
+            <div class="homepage__text">
+                <div class="pageUp__link">
+                    <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
+                    <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
+                    <a href="#page1"></a>
+                </div>
             </div>
-            <div class="bottom__link link">
-                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Work</a></p>
+            <div class="bottom__link link bottom__link--animation--stopped">
+                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Next Project</a></p>
                 <div class="bottom__link__line__container">
                     <div class="bottom__link__line"></div>
                 </div>
