--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <div class="section">
             <div class="homepage__text">
                 <div class="pageUp__link">
-                    <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
-                    <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
+                    <p class="fluid-type24-44 myriad-pro-condensed homepage__name projects__name">JACOB FRANK</p>
+                    <p class="fluid-type12-16 roboto projects__subhead">Developer &amp; Designer</p>
                     <a href="#page1"></a>
                 </div>
             </div>
