--- a/school/IGME590/assignments/CyclicAutomata/index.html
+++ b/school/IGME590/assignments/CyclicAutomata/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang='en'>
+<!-- cd /Users/jacobfrank/GitHub/JacobDFrank.github.io/school/IGME590/assignments/CyclicAutomata -->
+<!-- browserify index.js -o app.js -->
+<!-- watchify index.js -v -o app.js -->
 
 <head>
     <style>
@@ -7,6 +10,7 @@
             margin: 0;
             padding: 0;
         }
+
         canvas {
             position: absolute;
             top: 0;
@@ -21,7 +25,50 @@
 
 <body>
     <canvas id="myCanvas"></canvas>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+
+
+    <script type="x-shader/x-vertex" id="vertexShader">
+
+        varying vec2 vUv; void main() { vUv = uv; vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 ); gl_Position = projectionMatrix * mvPosition; } // needed for a GLSL Vertex shader
+    </script>
+
+    <script  type="x-shader/x-fragment" id="fragmentShader">
+        uniform float time;
+        uniform vec2 resolution;
+        uniform sampler2D tPrev;
+
+        varying vec2 vUv;
+
+        vec2 normalizedPosition() {
+            return 2.0 * vUv + -1.0;
+        }
+
+        float rand(vec2 co) {
+            return fract(sin(dot(co.xy, vec2(12.9898, 78.233))) * 43758.5453);
+        }
+
+        //
+        // scene
+        //
+
+        const int R = 3; // Range: in the vicinity of Range
+        const int T = 7; // Threshold: Number of neighbors with state required for state transition
+        const int C = 7; // Colors: Number of Colors states (0..C-1)
+        const bool N = false; // Neighborhood Types near the Neighborhood. Moore (NM) if false, Von Neumann (NN) if true
+
+        float initialize(vec2 p) {
+
+
+            // Random start
+            float r = rand(gl_FragCoord.xy + vec2(40.0, 2000.0));
+            return floor(r * float(C) + 1e-10) / float(C);
+        }
+
+        
+    </script>
+
     <script src='./app.js'></script>
 
 </body>
