--- a/index.html
+++ b/index.html
@@ -71,11 +71,26 @@
 </head>
 
 <body>
-    <div class="page__header">
+    <!-- <div class="page__header homepage__text">
         <p class="fluid-type30-60 myriad-pro-condensed projects__name">JACOB FRANK</p>
         <p class="fluid-type14-20 roboto projects__subhead">Developer &amp; Designer</p>
         <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
         <a href="#page1"></a>
+    </div> -->
+    <div class="homepage__text">
+        <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
+        <!-- <p style="font-size: 90px !important; color: #333 !important" class="myriad-pro-condensed homepage__name">JACOB FRANK</p> -->
+        <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
+
+        <!-- <div class="ballGif"> -->
+        <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
+        <!-- </div> -->
+    </div>
+    <div class="bottom__link link">
+        <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Work</a></p>
+        <div class="bottom__link__line__container">
+            <div class="bottom__link__line"></div>
+        </div>
     </div>
     <div class="nav">
         <div class="nav__wrapper nav--left nav--transform">
@@ -88,21 +103,7 @@
 
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
-            <div class="homepage__text">
-                <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
-                <!-- <p style="font-size: 90px !important; color: #333 !important" class="myriad-pro-condensed homepage__name">JACOB FRANK</p> -->
-                <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
 
-                <!-- <div class="ballGif"> -->
-                <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
-                <!-- </div> -->
-            </div>
-            <div class="bottom__link link">
-                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Work</a></p>
-                <div class="bottom__link__line__container">
-                    <div class="bottom__link__line"></div>
-                </div>
-            </div>
         </div>
 
         <div class="section">
