Fixed it finally

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Developer, Designer, and Student">
 
     <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
-    <meta property="og:description" content="Developer, Designer, and Student">
+    <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://stevenmengin.com/media/assets/social.jpg">
     <meta property="og:image:type" content="image/jpeg">
@@ -24,9 +24,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
 
-    <meta itemprop="name" content="Developer, Designer, and Student">
-    <meta itemprop="description" content="Developer, Designer, and Student">
-    <meta itemprop="image" content="Developer, Designer, and Student">
+    <meta itemprop="name" content="Digital designer in London">
+    <meta itemprop="description" content="Digital designer in London">
+    <meta itemprop="image" content="Digital designer in London">
 
     <meta name="author" content="Jacob Frank">
 
@@ -71,27 +71,6 @@
 </head>
 
 <body>
-    <!-- <div class="page__header homepage__text">
-        <p class="fluid-type30-60 myriad-pro-condensed projects__name">JACOB FRANK</p>
-        <p class="fluid-type14-20 roboto projects__subhead">Developer &amp; Designer</p>
-        <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
-        <a href="#page1"></a>
-    </div> -->
-    <div class="homepage__text">
-        <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
-        <!-- <p style="font-size: 90px !important; color: #333 !important" class="myriad-pro-condensed homepage__name">JACOB FRANK</p> -->
-        <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
-
-        <!-- <div class="ballGif"> -->
-        <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
-        <!-- </div> -->
-    </div>
-    <div class="bottom__link link">
-        <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Work</a></p>
-        <div class="bottom__link__line__container">
-            <div class="bottom__link__line"></div>
-        </div>
-    </div>
     <div class="nav">
         <div class="nav__wrapper nav--left nav--transform">
             <p class="fluid-type14-20 roboto link"> <a class="link__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
@@ -103,20 +82,23 @@
 
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
-
-        </div>
-
-        <div class="section">
             <div class="homepage__text">
-
+                <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
+                <!-- <p style="font-size: 90px !important; color: #333 !important" class="myriad-pro-condensed homepage__name">JACOB FRANK</p> -->
+                <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
+                <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
+                <!-- <div class="ballGif"> -->
+                <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
+                <!-- </div> -->
             </div>
-            <div class="bottom__link link bottom__link--animation--stopped">
-                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Next Project</a></p>
+            <div class="bottom__link link">
+                <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Work</a></p>
                 <div class="bottom__link__line__container">
                     <div class="bottom__link__line"></div>
                 </div>
             </div>
         </div>
+
         <div class="section">
             <div class="homepage__text">
                 <div class="pageUp__link">
