--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
 </head>
 
 <body>
+    <div class="homepage__text">
+        <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
+        <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
+        <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
+    </div>
+    <div class="bottom__link link">
+        <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
+        <div class="bottom__link__line__container">
+            <div class="bottom__link__line"></div>
+        </div>
+    </div>
     <div class="nav">
         <div class="nav__wrapper nav--left nav--transform">
             <p class="fluid-type14-20 roboto link"> <a class="link__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
@@ -82,25 +93,21 @@
 
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
-            <div class="homepage__text">
+            <!-- <div class="homepage__text">
                 <p class="fluid-type30-60 myriad-pro-condensed homepage__name">JACOB FRANK</p>
-                <!-- <p style="font-size: 90px !important; color: #333 !important" class="myriad-pro-condensed homepage__name">JACOB FRANK</p> -->
                 <p class="fluid-type14-20 roboto">Developer &amp; Designer</p>
                 <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
-                <!-- <div class="ballGif"> -->
-                <!-- <img id="ball--fallBack" class="ballGif--img" src="http://thoughtatwork.cias.rit.edu/img/puls.gif"> -->
-                <!-- </div> -->
             </div>
             <div class="bottom__link link">
                 <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" href="#page2">Work</a></p>
                 <div class="bottom__link__line__container">
                     <div class="bottom__link__line"></div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="section">
-            <div class="homepage__text">
+            <!-- <div class="homepage__text">
                 <div class="pageUp__link">
                     <p class="fluid-type24-44 myriad-pro-condensed homepage__name projects__name">JACOB FRANK</p>
                     <p class="fluid-type12-16 roboto projects__subhead">Developer &amp; Designer</p>
@@ -112,7 +119,11 @@
                 <div class="bottom__link__line__container">
                     <div class="bottom__link__line"></div>
                 </div>
-            </div>
+            </div> -->
+        </div>
+        <div class="section">
+        </div>
+        <div class="section">
         </div>
     </div>
     <div id="ball"></div>
