--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=no">
 
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="img/favicon.png" type="image/x-icon">
 
     <meta name="description" content="Developer, Designer, and Student">
 
@@ -33,6 +33,7 @@
     <title>Jacob Frank Developer &amp; Designer</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/page.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script>
     <script src="vendors/jquery.easings.min.js"></script>
@@ -93,9 +94,15 @@
 
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
-
         </div>
         <div class="section">
+            <div class="project__cover">
+                <img src="img/tawProjectCoverCropped.jpeg" class="project__cover__image">
+                <div class="project__cover__content">
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">Thought at Work</h1>
+                    <h4 class="fluid-type14-20 roboto">- JS, HTML/CSS, Project Management</h4>
+                </div>
+            </div>
         </div>
         <div class="section">
         </div>
