--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 
 <body>
     <div class="homepage__text">
-        <p class="fluid-type30-60 myriad-pro-condensed homepage__name projects__name">JACOB FRANK</p>
-        <p class="fluid-type14-20 roboto projects__subhead">Developer &amp; Designer</p>
-        <p class="fluid-type10-20 roboto inProgress">Website will be done soon</p>
+        <p class="fluid-type30-60 myriad-pro-condensed homepage__name projects__name"><a href="index.html">JACOB FRANK</a></p>
+        <p class="fluid-type14-20 roboto projects__subhead"><a href="index.html">Developer &amp; Designer</a></p>
+        <p class="fluid-type10-20 roboto inProgress"><a href="index.html">Website will be done soon</a></p>
     </div>
     <div class="bottom__link link">
         <p class="fluid-type14-20 roboto bottom__link__name"> <a class="link__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
-        <div class="bottom__link__line__container">
+        <div class="bottom__link__line__container" id="bottom__link__lastLine">
             <div class="bottom__link__line"></div>
         </div>
     </div>
@@ -102,14 +102,40 @@
                 <img src="img/tawProjectCoverCropped.jpeg" class="project__cover__image">
                 <div class="project__cover__content">
                     <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">Thought at Work</h1>
-                    <h4 class="fluid-type14-20 roboto">- JS, HTML/CSS, Project Management</h4>
+                    <h4 class="fluid-type14-20 roboto">- Front-End, Project Management</h4>
                 </div>
             </div>
         </div>
         <div class="section">
+            <div class="project__cover">
+                <img src="img/glProjectCoverCropped.jpeg" class="project__cover__image">
+                <div class="project__cover__content">
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">WebGL Summer</h1>
+                    <h4 class="fluid-type14-20 roboto">- JS, WebGL, Web Audio</h4>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="project__cover">
+                <img src="img/hawkesProjectCoverCropped.jpeg" class="project__cover__image">
+                <div class="project__cover__content">
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">Hawkes Media Group</h1>
+                    <h4 class="fluid-type14-20 roboto">- Front-End, UX, UI</h4>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            <div class="project__cover">
+                <img src="img/seoProjectCoverCropped.jpeg" class="project__cover__image">
+                <div class="project__cover__content">
+                    <h1 class="project__cover__content__title fluid-type80-100 myriad-pro-condensed">RIT SEO</h1>
+                    <h4 class="fluid-type14-20 roboto">- Front-End, UX, UI</h4>
+                </div>
+            </div>
         </div>
     </div>
     <script src='js/app.js'></script>
+
     <!-- <script src='js/index.js'></script> -->
 
 </body>
