Fixed Link issues

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
 <body>
     <div class="homepage__text">
-        <p class="fluid-type30-60 myriad-pro-condensed homepage__name projects__name homepage__text--rise"><a href="index.html">JACOB FRANK</a></p>
-        <p class="fluid-type14-20 roboto projects__subhead homepage__text--rise"><a href="index.html">Developer &amp; Designer</a></p>
-        <p class="fluid-type10-20 roboto inProgress homepage__text--rise"><a href="index.html">Website will be done soon</a></p>
+        <p class="fluid-type30-60 myriad-pro-condensed homepage__name projects__name index--rise1"><a href="index.html">JACOB FRANK</a></p>
+        <p class="fluid-type14-20 roboto projects__subhead index--rise1"><a href="index.html">Developer &amp; Designer</a></p>
+        <p class="fluid-type10-20 roboto inProgress index--rise1"><a href="index.html">Website will be done soon</a></p>
     </div>
-    <div class="bottom__link link">
+    <div class="bottom__link link index--rise1">
         <p class="fluid-type14-20 roboto bottom__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
         <div class="bottom__link__line__container" id="bottom__link__lastLine">
             <div class="bottom__link__line"></div>
