Created hud for case

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/page.css">
+    <link rel="stylesheet" href="css/case.css">
     <link rel="stylesheet" href="css/polyfill.object-fit.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
@@ -80,7 +81,7 @@
         <p class="fluid-type10-20 roboto inProgress index--rise1"><a href="index.html">Website will be done soon</a></p>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto bottom__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
+        <p class="fluid-type14-20 roboto center__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
         <div class="bottom__link__line__container" id="bottom__link__lastLine">
             <div class="bottom__link__line"></div>
         </div>
