--- a/taw.html
+++ b/taw.html
@@ -34,6 +34,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/page.css">
+    <link rel="stylesheet" href="css/case.css">
     <link rel="stylesheet" href="css/polyfill.object-fit.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
@@ -70,15 +71,10 @@
 </head>
 
 <body>
-    <div class="homepage__text">
-        <p class="fluid-type30-60 myriad-pro-condensed homepage__name projects__name index--rise1"><a href="index.html">JACOB FRANK</a></p>
-        <p class="fluid-type14-20 roboto projects__subhead index--rise1"><a href="index.html">Developer &amp; Designer</a></p>
-        <p class="fluid-type10-20 roboto inProgress index--rise1"><a href="index.html">Website will be done soon</a></p>
-    </div>
-    <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto bottom__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
-        <div class="bottom__link__line__container" id="bottom__link__lastLine">
-            <div class="bottom__link__line"></div>
+    <div class="top__link link index--rise1">
+        <p class="fluid-type14-20 roboto top__link__name center__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Back</a></p>
+        <div class="top__link__line__container" id="bottom__link__lastLine">
+            <div class="top__link__line"></div>
         </div>
     </div>
     <div class="nav">
@@ -87,6 +83,12 @@
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
             <p class="fluid-type14-20 roboto link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
+        </div>
+    </div>
+    <div class="bottom__link link index--rise1">
+        <p class="fluid-type14-20 roboto center__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
+        <div class="bottom__link__line__container" id="bottom__link__lastLine">
+            <div class="bottom__link__line"></div>
         </div>
     </div>
 
